--- a/greetings.html
+++ b/greetings.html
@@ -3,7 +3,7 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: monospace;
+    font-family: Lyon-Text, Georgia, ui-serif, serif;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
@@ -40,18 +40,19 @@ body{
     var today = new Date();
     var hrs = today.getHours();
     var dayOfWeek = weekday[today.getDay()];
-    var date = dayOfWeek+" " + today.getDate() + "/" +(today.getMonth()+1) +'/'+today.getFullYear()  ;
+    const month = today.toLocaleString('default', { month: 'long' });
+    var dateString = dayOfWeek + ", " + month + " " + today.getDate() + ", " + today.getFullYear();
 
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning  ';
+        greet = 'Good Morning, Chelsea! ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon ';
+        greet = 'Good Afternoon, Chelsea! ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening  ';
+        greet = 'Good Evening, Chelsea! ';
 
     document.getElementById('lbl').innerHTML =
-        greet+=`<div id="date"> It's ${date}</div>`;
+        greet+=`<div id="date"> It's ${dateString}</div>`;
 </script> 
 </html>
