--- a/greetings.html
+++ b/greetings.html
@@ -5,7 +5,7 @@
 #lbl {
     font-family: Lyon-Text, Georgia, ui-serif, serif;
     font-size: xx-large;
-    color: #626262;
+    color: #5d0076;
     padding: 5px;
     border: 1px solid #ececec;
     text-align: center;
@@ -18,7 +18,7 @@
     font-size:large;
 }
 body{
-    background-color: aliceblue;
+    background-color: #e6d7ff;
 }
     </style>
 </head>
