--- a/wedding_countdown.html
+++ b/wedding_countdown.html
@@ -47,12 +47,11 @@
     <h3 class="wedding-font-dark">
         Wedding Countdown
     </h3>
-        <!-- <h2 id="months" class="box wedding-font-dark wedding-bck-color-1"></h2> -->
-        <h2 id="weeks" class="box wedding-font-dark wedding-bck-color-2"></h2>
-        <h2 id="days" class="box wedding-font-dark wedding-bck-color-3"></h2>
-        <h2 id="hours" class="box wedding-font-dark wedding-bck-color-1"></h2>
-        <h2 id="minutes" class="box wedding-font-dark wedding-bck-color-5"></h2>
-
+        <!-- <h2 id="months" class="box wedding-font-dark wedding-bck-gradient-1"></h2> -->
+        <h2 id="weeks" class="box wedding-font-dark wedding-bck-gradient-1"></h2>
+        <h2 id="days" class="box wedding-font-dark wedding-bck-gradient-2"></h2>
+        <h2 id="hours" class="box wedding-font-dark wedding-bck-gradient-3"></h2>
+        <h2 id="minutes" class="box wedding-font-dark wedding-bck-gradient-4"></h2>
     </div>
 
 
