--- a/greetings.html
+++ b/greetings.html
@@ -1,26 +1,8 @@
 <html> 
 <head>
     <title>Greeting Message</title> 
-    <style>
-#lbl {
-    font-family: Lyon-Text, Georgia, ui-serif, serif;
-    font-size: xx-large;
-    color: #5d0076;
-    padding: 5px;
-    border: 1px solid #ececec;
-    text-align: center;
-    line-height: 1.5;
-    height:85%
+    <link rel="stylesheet" href="greetings.css">
 
-
-}
-#date{
-    font-size:large;
-}
-body{
-    background-color: #e6d7ff;
-}
-    </style>
 </head>
 <body>
     <div id="lbl"></div>
