--- a/quotes-taylor.html
+++ b/quotes-taylor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote</title>
     <link rel="stylesheet" href="quotes-taylor.css">
-    <script type="text/javascript" src="quotes-all.js"></script>
+    <script type="text/javascript" src="quotes-taylor.js"></script>
 
 </head>
 <body>
