--- a/quotes-other.html
+++ b/quotes-other.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote</title>
-    <link rel="stylesheet" href="quotes-taylor.css">
-    <script type="text/javascript" src="quotes-all.js"></script>
+    <link rel="stylesheet" href="quotes-other.css">
+    <script type="text/javascript" src="quotes-other.js"></script>
 </head>
 <body>
 
@@ -15,25 +15,34 @@
 	</div>
 
 <script>
+    //set initial quote
+    displayQuote();
 
-//15 min in milliseconds
-const INTERVAL = 900000;
+    //15 min in milliseconds
+    const INTERVAL = 900000;
 
-function displayQuote(){
-    //document.getElementById('widget').innerHTML =quotes[0];
-    quotes.forEach((quoteObj, i) => {
-        setTimeout(() => {
-            document.getElementById('quote').innerHTML =quoteObj.quote;
-            document.getElementById('source').innerHTML = " - " + quoteObj.source;
-        }, i * INTERVAL);  
-    });
+    //after every INTERVAL, display a new quote
+    setInterval(displayQuote, INTERVAL);
+
+    function displayQuote(){
+        shuffleArray(quotes);
+
+        var quoteObj = quotes[0];
+        document.getElementById('quote').innerHTML =quoteObj.quote;
+        document.getElementById('source').innerHTML = " - " + quoteObj.source;
     }
 
-    function displayWidget() {
-        displayQuote();
-        setTimeout(dispalyWidget, quotes.length*INTERVAL);
+
+    /* Randomize array in-place using Durstenfeld shuffle algorithm */
+    function shuffleArray(array) {
+        console.log("shuffle");
+        for (var i = array.length - 1; i > 0; i--) {
+            var j = Math.floor(Math.random() * (i + 1));
+            var temp = array[i];
+            array[i] = array[j];
+            array[j] = temp;
+        }
     }
-    displayQuote()
 
 </script>
 
