--- a/quotes-taylor.html
+++ b/quotes-taylor.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="widget" id="widget">
+    <div class="taylorQuoteWidget" id="widget">
 		<div class="quote" id="quote"></div>
 		<div class="songAndAlbum" id="songAndAlbum"></div>
 	</div>
