sass and folder structure

--- a/greetings/greetings.html
+++ b/greetings/greetings.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="greetings.css">
 
 </head>
-<body>
-    <div id="lbl"></div>
+<body >
+    <div id="lbl" class="teal-background-gradient"></div>
 </body>
 
 <script>
