--- a/weather/weather.html
+++ b/weather/weather.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather</title>
-
-    <style>
-        body{
-            background-color: aliceblue;
-        }
-    </style>
+    <link rel="stylesheet" href="weather.css">
 </head>
 <body>
   <a class="weatherwidget-io" href="https://forecast7.com/en/35d96n83d92/knoxville/?unit=us" data-label_1="KNOXVILLE" data-label_2="WEATHER" data-theme="original" >KNOXVILLE WEATHER</a>
