--- a/countdown_wedding/countdown_wedding.html
+++ b/countdown_wedding/countdown_wedding.html
@@ -13,14 +13,14 @@
 <body>
     
     <div id="counter" class="wedding-border">
-    <h3 class="wedding-font-dark">
+    <h3>
         Wedding Countdown
     </h3>
-        <!-- <h2 id="months" class="box wedding-font-dark wedding-bck-gradient-1"></h2> -->
-        <h2 id="weeks" class="box wedding-font-dark wedding-bck-gradient-1"></h2>
-        <h2 id="days" class="box wedding-font-dark wedding-bck-gradient-2"></h2>
-        <h2 id="hours" class="box wedding-font-dark wedding-bck-gradient-3"></h2>
-        <h2 id="minutes" class="box wedding-font-dark wedding-bck-gradient-4"></h2>
+        <!-- <h2 id="months" class="box_months" ></h2> -->
+        <h2 id="weeks" class="box_weeks"></h2>
+        <h2 id="days" class="box_days"></h2>
+        <h2 id="hours" class="box_hours"></h2>
+        <h2 id="minutes" class="box_minutes"></h2>
     </div>
 
 
