--- a/greetings/greetings.html
+++ b/greetings/greetings.html
@@ -5,7 +5,7 @@
 
 </head>
 <body >
-    <div id="lbl" class="teal-background-gradient"></div>
+    <div id="lbl" class="greetings_lbl"></div>
 </body>
 
 <script>
