--- a/quotes_other/quotes_other.html
+++ b/quotes_other/quotes_other.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="quoteWidget purple-background-gradient" id="widget">
+    <div class="quoteWidget" id="widget">
 		<div class="quote" id="quote"></div>
 		<div class="quote_source" id="quote_source"></div>
 	</div>
