--- a/quotes_taylor/quotes_taylor.html
+++ b/quotes_taylor/quotes_taylor.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="">
-    <div class="taylorQuoteWidget teal-background-gradient" id="widget">
+    <div class="taylorQuoteWidget" id="widget">
 		<div class="taylor_quote" id="quote"></div>
 		<div class="taylor_songAndAlbum" id="songAndAlbum"></div>
 	</div>
